snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
2358333d4e8537bdbab5fb3cfd2bf7586b19d3e39c1dd86673b8110fe2238286f3c121f6e067c5f711a402c1cf379919a6aedd60638f84e24e068a73e13f6791